Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-3817

Assertion on non (HTTP/S WS/S) request scheme in debug mode

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 6.0.0
    • HTTP
    • None

    Description

      When responding to a known (but unhandled) scheme we assert in HttpTransact::check_response_validity

      FATAL: HttpTransact.cc:5350: failed assert `s->next_hop_scheme == URL_WKSIDX_HTTP || s->next_hop_scheme == URL_WKSIDX_HTTPS`

      This is due to an incorrect check in check_request_validity (that was supposed to catch and return an error on this condition)

      Attachments

        Issue Links

          Activity

            People

              ushachar Uri Shachar
              ushachar Uri Shachar
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: