TS-3817: Assertion on non (HTTP/S WS/S) request scheme in debug mode